# vgi

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  LICENSE  README.md  TODO.md
.github/workflows/: build.yml  deploy.yml
cmake/: BuildShaders.cmake  EnableSVML.cmake  Unicode.cmake
docs/: book.toml
docs/src/: README.md  SUMMARY.md  dependencies.md  requirements.md  systems_and_layers.md  usage.md
docs/src/architecture/: systems_and_layers.md
docs/theme/: highlight.js
src/: vma.cpp
src/exe/: basic.cpp  basic.hpp  main.cpp  skeleton.cpp  skeleton.hpp  waves.cpp  waves.hpp
src/exe/shaders/: basic.frag  basic.vert  triangle.frag  triangle.vert  waves.frag  waves.vert
src/lib/vgi/: arch.hpp  cmdbuf.cpp  cmdbuf.hpp  defs.hpp  device.cpp  device.hpp  event.cpp  event.hpp  forward.hpp  frame.cpp  frame.hpp  fs.cpp  fs.hpp  input.hpp  log.cpp  log.hpp  main.hpp  math.hpp  memory.hpp  pipeline.cpp  pipeline.hpp  resource.hpp  texture.cpp  texture.hpp  tray.cpp  tray.hpp  vgi.cpp  vgi.hpp  vulkan.hpp  window.cpp  window.hpp
src/lib/vgi/asset/: gltf.cpp  gltf.hpp
src/lib/vgi/buffer/: index.hpp  storage.hpp  transfer.cpp  transfer.hpp  uniform.cpp  uniform.hpp  vertex.cpp  vertex.hpp
src/lib/vgi/collections/: slab.hpp
src/lib/vgi/math/: camera.cpp  camera.hpp  transf3d.cpp  transf3d.hpp
src/lib/vgi/pipeline/: shader.cpp  shader.hpp
src/lib/vgi/resource/: mesh.cpp  mesh.hpp
src/private/vgi/: io.cpp  io.hpp  slab.hpp
